fixed avatar overflowing

--- a/css/forums.css
+++ b/css/forums.css
@@ -177,7 +177,9 @@
 }
 
 .avatar {
-    margin-top: 0.3rem;
+    display: block;
+    max-width: 9rem;
+    margin: 0.3rem auto 0;
 }
 
 .post .content {
